hard-gists/9874480/run.log
=== Docker Run Log for 9874480 ===
Started at: Mi 29. Okt 18:33:52 CET 2025

[2025-10-29 18:33:53] START: Running container for 9874480
[2025-10-29 18:33:53] SUCCESS: Container 8625af40df16b243759bf3fa5441b05479c7dcad3af1d93e0bb54b087b428237 started for 9874480
=== Container logs for 9874480 ===
  File "/snippet.py", line 138
    print "Already on Playlist"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 9874480 ===
[2025-10-29 18:33:55] INFO: Container 8625af40df16b243759bf3fa5441b05479c7dcad3af1d93e0bb54b087b428237 has stopped
